<resources>
    <string name="app_name">UomiApplication</string>
    <string name="app_name_short">uomi</string>
    <!-- Strings related to login -->
    <string name="welcome_login">Welcome to uomi! The money tracker for you and your friends.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Accounts</string>
    <string name="action_edit_icon">Edit</string>
    <string name="action_refresh_icon">Refresh</string>
    <string name="title_activity_main_nav_drawer">MainNavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Set me to username</string>
    <string name="nav_header_subtitle">Set me to user email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter accounts</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_balance_ph">1000.00</string>
    <string name="avatarDesc">Avatar for contact view</string>
    <string name="example_name">Nathaniel Johnson</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="dashboard_title">uomi Dashboard</string>
    <string name="balanceCaption">Your net balance is...</string>
    <string name="add_transaction_menu_text">Add transaction</string>
    <string name="delete_this_account_menu_text">Delete this account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_account">Create Account</string>
    <string name="group_account_prompt">Group Account?</string>
    <string name="cancel">Cancel</string>
    <string name="account_balance_caption">Your balance with this contact:</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_transaction">Delete Transaction</string>


    <string name="facebook_app_id">483083305556412</string>
    <string name="fb_login_protocol_scheme">fb483083305556412</string>
    <string name="notification_example_text">You owe Nathaniel Johnson $1,000.</string>
    <string name="notif_icon">notif_icon</string>
    <string name="balance">balance</string>
    <string name="tranasactions_list">Account Transactions</string>
    <string name="example_Transaction">Two slices of pizza</string>
    <string name="transPicDesc">Image for transaction can go- here, not sure if needed</string>
    <string name="longstring">sdfygsudygfusydgfuygsduyfgsd</string>
    <string name="example_userPaid">Matthew Paid</string>
    <string name="createTransaction">Add New Transaction</string>
    <string name="itemToAdd">Item to add</string>
    <string name="itemValue">Item Value</string>
    <string name="create_button">create</string>
    <string name="group_account_toggle" />
    <string name="group_account_toggle1">Group Account</string>
    <!--Production-->
    <string name="base_url">https://uomi-api.herokuapp.com/uomi_api</string>
    <!--Development-->
    <!--<string name="base_url">http://192.168.2.17:8080/uomi_api</string>-->
    <string name="preference_file_key">ca.outercove.uomiapplication.PREFERENCE_FILE_KEY</string>


</resources>
