<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/action_refresh_icon"/>

    <item
        android:id="@+id/action_edit"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit_icon"/>

    <item
        android:id="@+id/action_add_transaction"
        app:showAsAction="never"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/add_transaction_menu_text" />

    <item
        android:id="@+id/action_delete_account"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/delete_this_account_menu_text" />


</menu>