<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogAccCreateTitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <Switch
        android:id="@+id/groupAccSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/group_account_prompt" />

    <EditText
        android:id="@+id/new_account_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_email"
        android:autofillHints="" tools:targetApi="o"/>
</LinearLayout>