<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTransCreateTitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/createTransaction"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/addedItem_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/itemToAdd"
        android:inputType="text"
        android:textSize="12sp"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/itemValue_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/itemValue"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        android:autofillHints="" tools:targetApi="o"/>


</LinearLayout>